// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <DiagnosisDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "diagnosesPanel": false,
        }
      }
      isBtnShowPanel={false}
      isEditButton={false}
      isOpen={false}
      isShowControlPanel={true}
      name="diagnosesPanel"
      title="Problems / Issues"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Problems / Issues
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Onset
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Nov-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Description
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Nov-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    03-Oct-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Source
              </label>
              <div
                className="form-control-static"
              />
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <DiagnosisDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "diagnosesPanel": true,
        }
      }
      isBtnShowPanel={false}
      isEditButton={true}
      isOpen={false}
      isShowControlPanel={true}
      name="diagnosesPanel"
      title="Edit Problems / Issues"
    >
      <ReduxForm
        detail={
          Object {
            "author": "Dr Tony Shannon",
            "code": "1.239389E7",
            "dateCreated": 1512580152000,
            "dateOfOnset": 1511568000000,
            "description": "25-Nov-2017",
            "problem": "1.0",
            "source": "ethercis",
            "sourceId": "9e06d22b-3f60-4bc6-bb6e-1b42bff75ed2",
            "terminology": "yyyy",
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <DiagnosisDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "diagnosesPanel": false,
        }
      }
      isBtnShowPanel={false}
      isEditButton={false}
      isOpen={false}
      isShowControlPanel={true}
      name="diagnosesPanel"
      title="Problems / Issues"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Problems / Issues
                  </label>
                  <div
                    className="form-control-static"
                  >
                    1.0
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Onset
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Nov-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Description
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Nov-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Dr Tony Shannon
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    06-Dec-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Source
              </label>
              <div
                className="form-control-static"
              >
                ethercis
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
